# canopy

./: .gitignore  LICENSE  README.md  STATUS-NOTE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: secrets.yml
canopy/: __init__.py  __main__.py  bws.py  cli.py  clients.py  context.py  excludes.py  fill.py  hindsight.py  llm.py  missing.py  providers.py  scanner.py  setup.py  yaml_io.py
docs/00-spec/: PLAN.md
docs/01-research/: 01-upstream-treedocs.md  README.md
docs/02-decisions/: 0001-pyyaml-only-dep.md  0002-multi-file-package.md  0003-treedocs-schema-compat.md  0006-openrouter-default.md  README.md
docs/03-retros/: README.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md
docs/04-changelog/: README.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  v0.0.1-release-notes.md  v0.1.0-release-notes.md  v0.2.0-release-notes.md  v0.3.0-release-notes.md  v0.4.0-release-notes.md  v0.5.0-release-notes.md
docs/providers/: BYO.md  README.md  anthropic.md  bedrock.md  cohere.md  gemini.md  openai.md  openrouter.md
docs/setup/: UNKNOWN_CLIENT.md
scripts/: extract_banner_svg.py  pre-commit  render_terminal_pngs.py
tests/: test_phase0.py  test_phase1.py  test_phase2_context.py  test_phase3_clients.py  test_phase3_providers.py  test_phase3_setup.py  test_phase4_providers.py
