[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canopy"
version = "0.0.1"
description = "MIT-licensed Python treedocs clone: maintain a YAML map of a repo's file tree with one description per path, with LLM-fillable entries and SHA256 drift detection."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "jb-bz" }]
keywords = ["treedocs", "repo-orientation", "yaml", "docs-as-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Documentation",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
canopy = "canopy.cli:main"

[tool.setuptools.packages.find]
include = ["canopy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["ignore::DeprecationWarning"]